tests/NormalTests/paczka1/small_fuzzy/54140193.err
Error in line 9: S275 A726 22,45
Error in line 8: S275 S275 45,2
Error in line 10: S275 A726 23,6
Error in line 12: WfHs S270 0,6
Error in line 13: S275 S270 901,6
